src/objects/AcctSeed__Project__c.object
<CustomObject>
    <description>Used to document and track time, expense, and revenue associated with projects.</description>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Related Customer</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Budgeted_Amount__c</fullName>
        <description>Summary of Expense budgeted at the Project Task Level.</description>
        <inlineHelpText>Summary of Expense budgeted at the Project Task Level.</inlineHelpText>
        <label>Budgeted Expense</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Budgeted_Hours__c</fullName>
        <description>Summary of hours budgeted at the Project Task Level. Typically used for Labor.</description>
        <inlineHelpText>Summary of hours budgeted at the Project Task Level. Typically used for Labor.</inlineHelpText>
        <label>Budgeted Hours</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Hours__c</summarizedField>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Budgeted_Revenue__c</fullName>
        <description>Summary of Revenue budgeted at the Project Task Level.</description>
        <inlineHelpText>Summary of Revenue budgeted at the Project Task Level.</inlineHelpText>
        <label>Budgeted Revenue</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Revenue__c</summarizedField>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Used in list views, filtered lookups and reporting.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Template_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes whether the project is a template project. A template project is used to clone a new project sourced from an opportunity</inlineHelpText>
        <label>Template Project</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>AcctSeed__Active</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Completed</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Opportunity__c</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Template_Project__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Opportunity__c</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Template_Project__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__External</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Opportunity__c</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Template_Project__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>External</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Internal</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Account__c</field>
            <operation>equals</operation>
            <value>Null</value>
        </filters>
        <label>Internal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Templates</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Template_Project__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>